# irq-affinity

./: README.md  affinity.cabal  irq-affinity.cabal  irq-affinity.hs  stack.yaml
src/: Affinity.hs  Mask.hs  Options.hs  Proc.hs  Utils.hs
