cabal-version:          2.4
name:                   irq-affinity
version:                6.1
-- synopsis:
-- description:
license-file:           LICENSE
author:                 Nicola Bonelli
maintainer:             nicola@pfq.io
category:               Utils
build-type:             Simple

flag StaticBuild {
    Description: "Enable static build"
    Default: False
}

common common-options
  build-depends:       base ^>= 4.16.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable irq-affinity
  import:             common-options
  main-is:            irq-affinity.hs
  build-depends:      base >= 4.7,
                      cmdargs,
                      mtl,
                      split,
                      ansi-terminal,
                      text,
                      regex-posix
  default-language:   Haskell2010

  if flag (StaticBuild) {
    ghc-options:      -O2 -Wall -static -threaded -optl-fuse-ld=bfd 
    cc-options:       -static
    ld-options:       -static -pthread
  }
  else {
    ghc-options:      -O2 -Wall -threaded -funbox-strict-fields -fno-state-hack -rtsopts
  }
